imagesdir = $(datadir)/doc/Terminal/C/images
images_DATA =								\
	terminal-edit-preferences.png					\
	terminal-first-time.png						\
	terminal-multiple-tabs.png					\
	terminal-preferences-advanced.png				\
	terminal-preferences-general.png				\
	terminal-set-title.png

EXTRA_DIST = 								\
	$(images_DATA)
