imagesdir = $(datadir)/doc/Terminal/fr/images
images_DATA =									\
	terminal-applications-dialog.png				\
	terminal-applications-menu.png				\
	terminal-choose-custom-webbrowser.png		\
	terminal-compose-shortcut.png				\
	terminal-edit-applications.png					\
	terminal-edit-preferences.png					\
	terminal-first-time.png						\
	terminal-multiple-tabs.png					\
	terminal-preferences-advanced.png			\
	terminal-preferences-appearance.png			\
	terminal-preferences-colors.png				\
	terminal-preferences-general.png				\
	terminal-preferences-shortcuts.png			\
	terminal-set-title.png							\
	terminal-toolbars.png

EXTRA_DIST = 									\
	$(images_DATA)
